--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="btn"></label>
+	<input type="button" id="btn" name="btn" value="submit">
     <script type="text/javascript" src="./script.js">
 </script>
 
