--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<label for="btn"></label>
-	<input type="button" id="btn" name="btn" value="submit">
+	<input type="submit" id="btn" name="btn" value="submit">
     <script type="text/javascript" src="./script.js">
 </script>
 
